<resources>
        <string name="app_name">receiptnotice</string>
        <string name="text_setting">Setting</string>
        <string name="text_clearlog">clear log</string>
        <string name="text_reverseshow">reverse display</string>
        <string name="text_home_fragment_tip">earn tip</string>
        <string name="text_home_fragment_nexttip">swip left to receipt record</string>
        <string name="filelog_title">post record</string>
        <string name="illustratedecrypt_title">Illustrate Decrypt</string>
        <string name="buttontext_setposturl">set the post url</string>
        <string name="accessibilityservicename">receiptnotice accessibility</string>
        <string name="accessibility_service_description">receiptnotice find info by this server</string>
        <string name="btnsetthirdapp" >set the third follow app </string>
        <string name="text_app_status_title">App Running Status</string>
        <string name="status_alipay_label">Alipay: </string>
        <string name="status_wechat_label">WeChat: </string>
        <string name="status_not_installed">Not installed</string>
        <string name="status_inactive">Installed (inactive)</string>
        <string name="status_active">Recently active</string>
        <string name="status_unknown">Unknown (grant permission)</string>
        <string name="btn_check_app_status">Refresh Status</string>
        <string name="btn_check_and_launch">Check &amp; Launch</string>
        <string name="btn_request_root">Enable Root</string>
        <string name="btn_requesting_root">Requesting...</string>
        <string name="btn_root_granted">Root Enabled</string>
        <string name="status_root_granted">Root: Granted (process detection + keep-alive)</string>
        <string name="status_root_not_granted">Root: Not enabled (tap button to request)</string>
        <string name="status_root_denied">Root: Denied (allow in Magisk)</string>
        <string name="toast_grant_usage_permission">Please grant Usage Access permission in Settings to detect app status</string>
        <string name="toast_status_refreshed">Status refreshed</string>
        <string name="toast_launched_apps">Launched %d app(s) via root</string>
        <string name="toast_all_running">All payment apps are running</string>
        <string name="toast_root_requesting">Requesting root, please tap Allow in Magisk dialog...</string>
        <string name="toast_root_success">Root granted, process detection and keep-alive enabled</string>
        <string name="toast_root_failed">Root denied, make sure Magisk is installed and allows this app</string>
        <string name="toast_root_already">Root already enabled</string>
        <string name="keepalive_title">Root Keep-Alive</string>
        <string name="keepalive_desc">Select apps to protect from being killed by system (refreshes every minute)</string>
        <string name="keepalive_self">This App</string>
        <string name="keepalive_alipay">Alipay</string>
        <string name="keepalive_wechat">WeChat</string>
        <string name="keepalive_protected">Protected</string>
        <string name="keepalive_not_running">Not running</string>
        <string name="keepalive_off">Keep-alive disabled</string>
        <string name="keepalive_interval_label">Refresh interval</string>
        <string name="keepalive_next_refresh">Next refresh: ~%d min</string>
        <string-array name="keepalive_interval_entries">
                <item>1 min</item>
                <item>2 min</item>
                <item>3 min</item>
                <item>5 min</item>
                <item>10 min</item>
                <item>15 min</item>
                <item>30 min</item>
        </string-array>
        <string-array name="keepalive_interval_values">
                <item>1</item>
                <item>2</item>
                <item>3</item>
                <item>5</item>
                <item>10</item>
                <item>15</item>
                <item>30</item>
        </string-array>
        <string-array name="pref_entries_encryptmethod">
                <item>des</item>
                <item>md5</item>
        </string-array>

        <string-array name="pref_entryvalues_encryptmethod">
                <item>des</item>
                <item>md5</item>
        </string-array>

        <string name="custom_app_current_title">Monitored Apps</string>
        <string name="custom_app_add_title">Add New Monitor</string>
        <string name="custom_app_step1">Step 1: Select app to monitor</string>
        <string name="custom_app_step2">Step 2: Set trigger keyword (optional)</string>
        <string name="custom_app_step3">Step 3: Set push type label</string>
        <string name="custom_app_pick_btn">Choose from installed apps</string>
        <string name="custom_app_not_selected">No app selected</string>
        <string name="custom_app_keyword_hint">Only push when notification contains this keyword. Leave empty to push all.</string>
        <string name="custom_app_keyword_example">e.g. payment, receipt, transfer</string>
        <string name="custom_app_type_hint">Used to identify the source in server. Auto-fills with app name.</string>
        <string name="custom_app_type_example">Auto-fills with app name</string>
        <string name="custom_app_add_btn">Add Monitor</string>
        <string name="custom_app_picker_title">Select app to monitor</string>
        <string name="custom_app_toast_select_first">Please select an app first</string>
        <string name="custom_app_toast_already_exists">This app is already being monitored</string>
        <string name="custom_app_toast_added">Added</string>
        <string name="custom_app_toast_deleted">Deleted</string>
        <string name="custom_app_toast_save_failed">Save failed</string>
        <string name="custom_app_empty">No custom rules yet. Add one below.</string>
        <string name="custom_app_rule_all">All notifications</string>
        <string name="custom_app_rule_keyword">Keyword: %s</string>
        <string name="custom_app_rule_type">Type: %s</string>
        <string name="custom_app_delete">Delete</string>
        <string name="custom_app_delete_confirm_title">Confirm Delete</string>
        <string name="custom_app_delete_confirm_msg">Delete this monitor rule?</string>
        <string name="custom_app_delete_yes">Delete</string>
        <string name="custom_app_delete_no">Cancel</string>

        <string name="manual_push_title">Manual Push</string>
        <string name="manual_push_desc">Manually enter amount and push to server when auto-detection misses</string>
        <string name="manual_push_amount_hint">Enter amount</string>
        <string name="manual_push_remark_hint">Remark (optional)</string>
        <string name="manual_push_btn">Push to Server</string>
        <string name="manual_push_no_url">Please set the push URL first</string>
        <string name="manual_push_no_amount">Please enter an amount</string>
        <string name="manual_push_invalid_amount">Invalid amount format</string>
        <string name="manual_push_sending">Sending...</string>
        <string name="manual_push_sent">Push request sent</string>
        <string name="manual_push_content">Manual push %s yuan</string>
        <string-array name="manual_push_types">
                <item>Alipay</item>
                <item>WeChat</item>
                <item>Other</item>
        </string-array>
</resources>
