<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.weihuagu.receiptnotice.view.MainActivity">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/text_home_fragment_tip"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/text_view_next_tip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/text_home_fragment_nexttip"
                android:textIsSelectable="true"
                android:textStyle="bold"
                app:layout_constraintAngle="170"
                app:layout_constraintCircle="@+id/text_view"
                app:layout_constraintCircleRadius="150dp" />
	    <TextView
                android:id="@+id/numofpush"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text=""/>
	    <TextView
                android:id="@+id/posturl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text=""
                android:textIsSelectable="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="#E0E0E0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="8dp"
                android:text="@string/text_app_status_title"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/status_alipay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="" />

            <TextView
                android:id="@+id/status_wechat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingBottom="8dp"
                android:text="" />

            <Button
                android:id="@+id/btn_check_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:text="@string/btn_check_app_status"
                style="?android:attr/borderlessButtonStyle" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
